# Prueba_ID_CdEOP_1

./: API.py  MANIFEST.IN  MU prueba ID CdEOP.docx  README.md  Reporte desembolsos - Obligaciones clientes.pbix  ejecucion.py  setup.cfg  setup.py
output/: Resultado_1.xlsx  Resultado_2.xlsx
src/vedd_prueba_cdeop/: _version.py  etl.py
src/vedd_prueba_cdeop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/vedd_prueba_cdeop/static/: config.json
src/vedd_prueba_cdeop/static/sql/ExtractTransformLoad/: 001_consulta1.sql  002_consulta2.sql
