[versioneer]
VCS = git
style = pep440
versionfile_source = src/vedd_prueba_cdeop/_version.py
versionfile_build = vedd_prueba_cdeop/_version.py
tag_prefix = ''

[metadata]
name = vedd-prueba-cdeop
author = haroldbarrantes
author_email = haroldbarrantes@bancolombia.com.co
description = El proyecto es la prueba de la vacante de ingeniero de datos nivel 3 asociada al centro de excelencia en la operacin
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.5.4, <=3.9.7
include_package_data = True
install_requires =
    pyodbc==4.0.27
    orquestador2>=1.2.2
    pandas
    openpyxl
    flask

[options.package_data]
* = static/*.json, static/sql/ExtractTransformLoad/*.sql

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    vedd_prueba_cdeop = vedd_prueba_cdeop.ejecucion:main